# simplex-playground

./: .dockerignore  .gitignore  README.md  config.yaml  notebook.py  pyproject.toml
backend/: .dockerignore  Dockerfile  analysis.py  hmm.py  main.py  matrices.py  requirements.txt  visualization.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  BeliefVisualizer.jsx  MatrixEditor.jsx  index.css
